# dewey

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/docs/: index.md
.storybook/: manager-head.html  preview-head.html  preview.css  preview.ts
dewey-lib/: Cargo.toml
dewey-lib/macros/: Cargo.toml
dewey-lib/src/: lib.rs
docs/: error-handling.md  index.md
docs/core-concepts/: onboarding-version.md
src/: App.css  App.tsx  index.css  main.tsx  routes.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri_err_test
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240320000000_initial_schema.sql  20240321000000_add_icon_path.sql  20240325000000_database_connections.sql  20240423000000_onboarding.sql
src-tauri/src/: constants.rs  database.rs  error.rs  error_subcategories.rs  lib.rs  main.rs  state.rs  types.rs  utils.rs
src-tauri/src/ai/: client.rs  mod.rs  query_generator.rs
src-tauri/src/commands/: database.rs  encryption.rs  keychain.rs  mod.rs  onboarding.rs  projects.rs  system.rs
src-tauri/src/database/: mod.rs  sqlite.rs
src-tauri/src/error/: categories.rs  constructors.rs  conversions.rs  impls.rs  messages.rs  mod.rs  types.rs
src-tauri/src/macros/: lib.rs
src-tauri/src/protocols/: icons.rs  mod.rs
src-tauri/src/services/: encryption.rs  key_management.rs  mod.rs
src-tauri/src/services/database/: mod.rs
src-tauri/src/services/storage/: icon.rs  mod.rs
src-tauri/src/services/storage/repositories/: connections.rs  mod.rs  onboarding.rs  projects.rs
src-tauri/src/storage/: icon.rs  mod.rs  models.rs
src-tauri/src/storage/repositories/: mod.rs  projects.rs
src-tauri/tests/: error_handling.rs
src/api/: index.ts  projects.ts
src/components/: AppLayout.tsx  AuthAwareComponent.tsx  AuthError.tsx  LoadingSpinner.tsx  Navigation.tsx  Projects.tsx  TitleBar.tsx  UserMenu.tsx  error-boundary.tsx
src/contexts/: create-project.context.tsx
src/hooks/: index.ts  use-error-handler.ts  use-toast.ts  useAuth.ts  useAuthGuard.ts  useDebounce.ts  useErrorHandler.ts  useOS.ts  useStore.ts  useTestConnection.ts
src/lib/: database.ts  errors.ts  utils.ts
src/pages/: 404.tsx  Home.tsx  auth.tsx  index.tsx  onboarding.tsx  profile.tsx
src/services/: toast-service.ts
src/store/: hooks.ts  index.ts  selectors.ts
src/styles/: index.css  theme.css
src/types/: auth.ts  connection.ts  index.ts  project.ts  svg.d.ts  system.ts
storybook-static/: iframe.html  index.json  project.json
storybook-static/assets/: card-DfUQO8NL.js  (+63 more)
(+96 files in other folders)
