[package]
name = "dewey"
version = "0.1.0"
description = "Dewey - Project Management Application"
authors = ["Dewey Team"]
edition = "2021"
repository = "https://github.com/dewey/dewey"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Core dependencies
[dependencies]
# Tauri and plugins
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"

# Async runtime
tokio = { version = "1.36.0", features = ["full"] }

# Error handling
thiserror = "1.0.57"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "migrate", "chrono", "postgres", "mysql" ] }
chrono = "0.4"

# Utilities
base64 = "0.21.7"
directories = "6.0.0"
urlencoding = "2.1.3"
blake3 = "1.5.0"

# Image handling
identicon-rs = "6.0.2"
image = "0.24"
tempfile = "3.10"

# Encryption
aes-gcm = "0.10.3"
rand = "0.8.5"

# Keyring
keyring = "2.3.2"

# New dependencies
mongodb = { version = "2.8.1", features = ["tokio-runtime"] }
